@@ -41,6 +41,7 @@ Version 1.3.1+svn:
     * Fixed the position of some halos when a unit was in a keep or castle.
     * Submerged units are no longer drowned when zooming.
     * Fixed problems with colour cursor in fullscreen.
+    * Automatic scrolling now starts and stops smoothly.
 
   * Sound
     * New or revised sound effects: hatchet.
